test/lambda/negative/semantic/start_non_pn.ls
fn child() => 1

pn main() {
    start child()
}
